test/corpus/realworld.txt
===
First real-world example
===
<div class="card w-{{width}} my-4">
  {{#img-top-src}}
  <img src="{{img-top-src}}" alt="{{img-top-alt}}" class="card-img-top" />
  {{/img-top-src}}
  {{#header}}
  <div class="card-header">
    {{{header}}}
  </div>
  {{/header}}
  <div class="card-body">
    {{#title}}
        <div class="h5 card-title">
        {{title}}
        </div>
    {{/title}}
    {{#subtitle}}
        <div class="h6 card-subtitle text-muted mb-2">
        {{subtitle}}
        </div>
    {{/subtitle}}
    <div class="card-text">
      {{{content}}}
    </div>
  </div>
  {{#img-bottom-src}}
    <img src="{{img-bottom-src}}" alt="{{img-bottom-alt}}" class="card-img-bottom" />
  {{/img-bottom-src}}
  {{#footer}}
    <div class="card-footer">
        {{{footer}}}
    </div>
  {{/footer}}
</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)
          (mustache_interpolation
            (mustache_identifier))
          (html_attribute_value))))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_self_closing_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (mustache_triple
          (mustache_identifier))
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (html_attribute_value))))
      (mustache_section
        (mustache_section_begin
          (mustache_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (mustache_interpolation
            (mustache_identifier))
          (html_end_tag
            (html_tag_name)))
        (mustache_section_end
          (mustache_tag_name)))
      (mustache_section
        (mustache_section_begin
          (mustache_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (mustache_interpolation
            (mustache_identifier))
          (html_end_tag
            (html_tag_name)))
        (mustache_section_end
          (mustache_tag_name)))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (mustache_triple
          (mustache_identifier))
        (html_end_tag
          (html_tag_name)))
      (html_end_tag
        (html_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_self_closing_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (mustache_triple
          (mustache_identifier))
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Second real-world example
===
{{#question}}
{{#inline}}<span class="d-inline-block" role="group" aria-label="Checkbox options">{{/inline}}
{{^inline}}<fieldset class="d-block"><legend class="visually-hidden">Checkbox options</legend>{{/inline}}

{{#answers}}
    <div class="form-check {{#inline}}form-check-inline d-inline-flex{{/inline}}{{^inline}}d-flex{{/inline}} align-items-center py-1 gap-2">
        <input class="form-check-input mt-0 flex-shrink-0" type="checkbox"
               name="{{name}}" value="{{key}}" {{^editable}}disabled{{/editable}}
               {{#checked}}checked{{/checked}} id="{{name}}-{{key}}">

        <label class="form-check-label d-flex align-items-center" for="{{name}}-{{key}}">
            {{^hide_letter_keys}}<div class="pl-checkbox-key-label">({{key}})</div>{{/hide_letter_keys}}
            <div class="ms-1 me-1 pl-checkbox-answer">{{{html}}}</div>
        </label>

        {{#display_feedback}}
        <div class="pl-checkbox-feedback">
            {{{feedback}}}
        </div>
        {{/display_feedback}}
            
        {{#display_score_badge}}
            {{#correct}}
                <span class="badge text-bg-success"><i class="fa fa-check" aria-hidden="true"></i></span>
            {{/correct}}
            {{#incorrect}}
                <span class="badge text-bg-danger"><i class="fa fa-times" aria-hidden="true"></i></span>
            {{/incorrect}}
        {{/display_score_badge}}
    </div>
{{/answers}}
    
{{#helptext}}
<div class="d-flex align-items-center gap-2">
    <span>{{{helptext}}}</span>
    <button type="button" class="btn btn-light btn-sm" data-bs-toggle="popover" data-bs-html="true" title="Checkbox" data-bs-content="{{info}}" data-bs-placement="auto">
        <i class="fa fa-question-circle" aria-hidden="true"></i>
    </button>
</div>
{{/helptext}}

{{#correct}}&nbsp;<span class="badge text-bg-success"><i class="fa fa-check" aria-hidden="true"></i> 100%</span>{{/correct}}
{{#partial}}&nbsp;<span class="badge text-bg-warning"><i class="far fa-circle" aria-hidden="true"></i> {{partial}}%</span>{{/partial}}
{{#incorrect}}&nbsp;<span class="badge text-bg-danger"><i class="fa fa-times" aria-hidden="true"></i> 0%</span>{{/incorrect}}

{{#inline}}</span>{{/inline}}
{{^inline}}</fieldset>{{/inline}}
{{/question}}

{{#format}}
{{{gradingtext}}}
{{/format}}

{{#submission}}
{{#parse_error}}
{{#inline}}<span class="d-inline-block">{{/inline}}
{{^inline}}<div class="d-block">{{/inline}}
    <span class="small" style="white-space: nowrap">
        <span class="badge text-bg-danger">
            Invalid <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
        </span>
        <a
            class="link-primary"
            tabindex="0"
            role="button"
            data-bs-placement="auto"
            data-bs-toggle="popover"
            data-bs-html="true"
            title="Format error"
            data-bs-content="{{parse_error}}"
        >
           More info…
        </a>
    </span>
</div>
{{#inline}}</span>{{/inline}}
{{^inline}}</div>{{/inline}}
{{/parse_error}}
{{^parse_error}}

{{#inline}}<span class="d-inline-block"><ul class="list-inline mb-0">{{/inline}}
{{^inline}}<div class="d-block"><ul class="list-unstyled mb-0">{{/inline}}
    
{{#answers}}
    <li {{#inline}}class="list-inline-item"{{/inline}}>
        <div class="d-inline-flex align-items-center">
        <span>{{^hide_letter_keys}}({{key}}){{/hide_letter_keys}} {{{html}}}</span>
        {{#display_feedback}}
            <div class="pl-checkbox-feedback pl-checkbox-submission-feedback">
                {{{feedback}}}
            </div>
        {{/display_feedback}}
        {{#display_score_badge}}
            {{#correct}}
                <span class="badge text-bg-success"><i class="fa fa-check" aria-hidden="true"></i></span>
            {{/correct}}
            {{#incorrect}}
                <span class="badge text-bg-danger"><i class="fa fa-times" aria-hidden="true"></i></span>
            {{/incorrect}}
        {{/display_score_badge}}
        </div>
    </li>
{{/answers}}

</ul>

{{#display_score_badge}}
    &nbsp;
    {{#correct}}
        <span class="badge text-bg-success"><i class="fas fa-check" aria-hidden="true"></i> 100%</span>
    {{/correct}}
    {{#incorrect}}
        <span class="badge text-bg-danger"><i class="fas fa-times" aria-hidden="true"></i> 0%</span>
    {{/incorrect}}
    {{#partial}}
        <span class="badge text-bg-warning"><i class="far fa-circle" aria-hidden="true"></i> {{partial}}%</span>
    {{/partial}}
{{/display_score_badge}}

{{#inline}}</span>{{/inline}}
{{^inline}}</div>{{/inline}}

{{/parse_error}}
{{/submission}}

{{#answer}}
    {{#inline}}<span class="d-inline-block"><ul class="list-inline mb-0">{{/inline}}
    {{^inline}}<div class="d-block"><ul class="list-unstyled mb-0">{{/inline}}
    {{#answers}}
        <li {{#inline}}class="list-inline-item"{{/inline}}>
            {{^hide_letter_keys}}({{key}}){{/hide_letter_keys}} {{{html}}}
        </li>
    {{/answers}}
    {{#inline}}</ul></span>{{/inline}}
    {{^inline}}</ul></div>{{/inline}}
{{/answer}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_forced_end_tag))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_inverted_section
      (mustache_inverted_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (text)
          (html_end_tag
            (html_tag_name)))
        (html_forced_end_tag))
      (mustache_inverted_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)
              (mustache_section
                (mustache_section_begin
                  (mustache_tag_name))
                (text)
                (mustache_section_end
                  (mustache_tag_name)))
              (mustache_inverted_section
                (mustache_inverted_section_begin
                  (mustache_tag_name))
                (_mustache_inverted_section_content
                  (text))
                (mustache_inverted_section_end
                  (mustache_tag_name)))
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (mustache_interpolation
                  (mustache_identifier))))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (mustache_interpolation
                  (mustache_identifier))))
            (mustache_attribute
              (mustache_inverted_section
                (mustache_inverted_section_begin
                  (mustache_tag_name))
                (html_attribute
                  (html_attribute_name))
                (mustache_inverted_section_end
                  (mustache_tag_name))))
            (mustache_attribute
              (mustache_section
                (mustache_section_begin
                  (mustache_tag_name))
                (html_attribute
                  (html_attribute_name))
                (mustache_section_end
                  (mustache_tag_name))))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (mustache_interpolation
                  (mustache_identifier))
                (html_attribute_value)
                (mustache_interpolation
                  (mustache_identifier)))))
          (html_element
            (html_start_tag
              (html_tag_name)
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (html_attribute_value)))
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (mustache_interpolation
                    (mustache_identifier))
                  (html_attribute_value)
                  (mustache_interpolation
                    (mustache_identifier)))))
            (mustache_inverted_section
              (mustache_inverted_section_begin
                (mustache_tag_name))
              (html_element
                (html_start_tag
                  (html_tag_name)
                  (html_attribute
                    (html_attribute_name)
                    (html_quoted_attribute_value
                      (html_attribute_value))))
                (text)
                (mustache_interpolation
                  (mustache_identifier))
                (text)
                (html_end_tag
                  (html_tag_name)))
              (mustache_inverted_section_end
                (mustache_tag_name)))
            (html_element
              (html_start_tag
                (html_tag_name)
                (html_attribute
                  (html_attribute_name)
                  (html_quoted_attribute_value
                    (html_attribute_value))))
              (mustache_triple
                (mustache_identifier))
              (html_end_tag
                (html_tag_name)))
            (html_end_tag
              (html_tag_name)))
          (mustache_section
            (mustache_section_begin
              (mustache_tag_name))
            (html_element
              (html_start_tag
                (html_tag_name)
                (html_attribute
                  (html_attribute_name)
                  (html_quoted_attribute_value
                    (html_attribute_value))))
              (mustache_triple
                (mustache_identifier))
              (html_end_tag
                (html_tag_name)))
            (mustache_section_end
              (mustache_tag_name)))
          (mustache_section
            (mustache_section_begin
              (mustache_tag_name))
            (mustache_section
              (mustache_section_begin
                (mustache_tag_name))
              (html_element
                (html_start_tag
                  (html_tag_name)
                  (html_attribute
                    (html_attribute_name)
                    (html_quoted_attribute_value
                      (html_attribute_value))))
                (html_element
                  (html_start_tag
                    (html_tag_name)
                    (html_attribute
                      (html_attribute_name)
                      (html_quoted_attribute_value
                        (html_attribute_value)))
                    (html_attribute
                      (html_attribute_name)
                      (html_quoted_attribute_value
                        (html_attribute_value))))
                  (html_end_tag
                    (html_tag_name)))
                (html_end_tag
                  (html_tag_name)))
              (mustache_section_end
                (mustache_tag_name)))
            (mustache_section
              (mustache_section_begin
                (mustache_tag_name))
              (html_element
                (html_start_tag
                  (html_tag_name)
                  (html_attribute
                    (html_attribute_name)
                    (html_quoted_attribute_value
                      (html_attribute_value))))
                (html_element
                  (html_start_tag
                    (html_tag_name)
                    (html_attribute
                      (html_attribute_name)
                      (html_quoted_attribute_value
                        (html_attribute_value)))
                    (html_attribute
                      (html_attribute_name)
                      (html_quoted_attribute_value
                        (html_attribute_value))))
                  (html_end_tag
                    (html_tag_name)))
                (html_end_tag
                  (html_tag_name)))
              (mustache_section_end
                (mustache_tag_name)))
            (mustache_section_end
              (mustache_tag_name)))
          (html_erroneous_end_tag
            (html_erroneous_end_tag_name))
          (html_forced_end_tag))
        (html_forced_end_tag))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name))
          (mustache_triple
            (mustache_identifier))
          (html_end_tag
            (html_tag_name)))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (mustache_interpolation
                  (mustache_identifier))))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (html_element
            (html_start_tag
              (html_tag_name)
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (html_attribute_value)))
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (html_attribute_value))))
            (html_end_tag
              (html_tag_name)))
          (html_end_tag
            (html_tag_name)))
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_entity)
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (html_end_tag
            (html_tag_name)))
        (text)
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_entity)
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (html_end_tag
            (html_tag_name)))
        (mustache_interpolation
          (mustache_identifier))
        (text)
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_entity)
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (html_end_tag
            (html_tag_name)))
        (text)
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_erroneous_end_tag
        (html_erroneous_end_tag_name))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_inverted_section
      (mustache_inverted_section_begin
        (mustache_tag_name))
      (html_erroneous_end_tag
        (html_erroneous_end_tag_name))
      (mustache_inverted_section_end
        (mustache_tag_name)))
    (mustache_section_end
      (mustache_tag_name)))
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_triple
      (mustache_identifier))
    (mustache_section_end
      (mustache_tag_name)))
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (mustache_section
        (mustache_section_begin
          (mustache_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (html_forced_end_tag))
        (mustache_section_end
          (mustache_tag_name)))
      (mustache_inverted_section
        (mustache_inverted_section_begin
          (mustache_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (html_forced_end_tag))
        (mustache_inverted_section_end
          (mustache_tag_name)))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value))))
          (text)
          (html_element
            (html_start_tag
              (html_tag_name)
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (html_attribute_value)))
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (html_attribute_value))))
            (html_end_tag
              (html_tag_name)))
          (html_end_tag
            (html_tag_name)))
        (html_element
          (html_start_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (html_attribute_value)))
            (html_attribute
              (html_attribute_name)
              (html_quoted_attribute_value
                (mustache_interpolation
                  (mustache_identifier)))))
          (text)
          (html_end_tag
            (html_tag_name)))
        (html_end_tag
          (html_tag_name)))
      (html_erroneous_end_tag
        (html_erroneous_end_tag_name))
      (mustache_section
